<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">QuizMe</string>
    <string name="textview">TextView</string>
    <string name="willkommen">Willkommen</string>
    <string name="quizme">QuizMe</string>
    <string name="start">Start</string>
    <string name="highscore_liste">Highscore Liste</string>
    <string name="todo">TODO</string>
    <string name="quiz">Quiz</string>
    <string name="infotext">Infotext</string>
    <string name="highscoreliste">Highscore Liste</string>
    <string name="jasa">Jasa</string>
    <string name="welchen_namen_hatte_java_urspr_nglich">Welchen Namen hatte Java ursprünglich?</string>
    <string name="chai">Chai</string>
    <string name="Abbrechbutton">Abbrechen</string>
    <string name="level_1">Level: 1</string>
    <string name="oak">Oak</string>
    <string name="_30">30</string>
    <string name="leben_3">Leben: 3</string>
    <string name="abbrechen">abbrechen</string>
    <string name="lase">Lase</string>
    <string name="xd">Wenn deine Zeit abläuft verlierst du ein Leben</string>
    <string name="hinweis_">HINWEIS</string>
    <string name="zur_ck">ZURÜCK</string>
    <string name="richtig">Richtig!</string>
    <string name="zur_n_chsten_frage">Zur nächsten Frage</string>
    <string name="du_hast_leider_verloren">Du hast leider verloren!</string>
    <string name="zur_highscoreliste">zur Highscoreliste</string>
    <string name="du_hast_alle_level_gemeistert">Du hast alle Level gemeistert!</string>
    <string name="zurhighscoreliste">Zur Highscoreliste</string>
    <string name="schlie_en">Schließen</string>
    <string name="hinWeis">hinweis</string>
    <string name="hinweis">HINWEIS</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="klicks_0">Klicks: 0</string>
    <string name="klick_mich">Klick mich</string>
    <string name="klicke_15x">Klicke: 15x</string>
    <string name="test_timer">test timer</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="ber_quizme">über quizme</string>
</resources>