<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width= "match_parent"
    android:layout_height= "match_parent"
    tools:context= ".Startseite"
    android:background = "@drawable/hintergrund">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1088dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/quizme"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#505050"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-250dp"
        android:layout_marginTop="430dp"
        android:layout_marginEnd="278dp"
        android:layout_toStartOf="@id/textView"
        android:layout_toEndOf="@id/textView"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="8sp"
        android:padding="8dp"
        android:text="@string/willkommen"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#505050"
        android:textSize="36sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="141dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="326dp"
        android:layout_marginTop="519dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:text="@string/start"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:iconPadding="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="325dp"
        android:layout_marginTop="588dp"
        android:background="@color/design_default_color_secondary_variant"
        android:drawableTint="@color/teal_700"
        android:fontFamily="sans-serif-light"
        android:text="@string/highscoreliste"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:iconPadding="8dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="736dp"
        android:layout_marginBottom="14dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:backgroundTint="#C7F6EA"
        android:contentDescription="@string/todo"
        android:padding="8dp"
        app:srcCompat="@android:drawable/ic_dialog_info" />

</RelativeLayout>