<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund_liste"
    tools:context=".pressTheButton">


    <Button
        android:id="@+id/klickMich"
        android:layout_width="480dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="135dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/klick_mich"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:iconPadding="8dp" />

    <TextView
        android:id="@+id/klickZaehler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/klickMich"
        android:fontFamily="@font/raleway_medium"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="300dp"
        android:text="@string/klicks_0" />

    <TextView
        android:id="@+id/klickMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="895dp"
        android:fontFamily="@font/raleway_semibold"
        android:padding="8dp"
        android:text="@string/klicke_15x"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="65sp" />
</RelativeLayout>