<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Startseite"
    android:background="@drawable/hintergrund">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="731dp"
        android:layout_marginTop="31dp"
        android:text="Level" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="393dp"
        android:layout_marginTop="35dp"
        android:text="Zeit" />

    <Button
        android:id="@+id/quit2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="318dp"
        android:layout_marginTop="442dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="@string/hinweis"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="1088dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/quizme"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#505050"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="359dp"
        android:layout_marginEnd="123dp"
        android:fontFamily="sans-serif-light"
        android:lineSpacingExtra="8sp"
        android:padding="8dp"
        android:text="@string/welchen_namen_hatte_java_urspr_nglich"
        android:textAllCaps="true"
        android:textColor="#505050"
        android:textSize="24sp" />

    <Button
        android:id="@+id/choice1"
        android:layout_width="247dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="142dp"
        android:layout_marginTop="526dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="@string/jasa"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/choice2"
        android:layout_width="247dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="425dp"
        android:layout_marginTop="528dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="@string/chai"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/choice3"
        android:layout_width="247dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="148dp"
        android:layout_marginTop="649dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="Oak"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/choice4"
        android:layout_width="247dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="425dp"
        android:layout_marginTop="647dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="Lase"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/quit"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="325dp"
        android:layout_marginTop="764dp"
        android:background="@color/white"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="abbrechen"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="31dp"
        android:text="Leben" />

</RelativeLayout>
